// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockedOverlay should render with default props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LockedOverlay
    code="abcdef"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "backgroundColor": "#bebebe",
            "height": 300,
            "opacity": 0.92,
            "padding": 40,
            "width": 310,
          }
        }
      >
        <Image
          resizeMethod="resize"
          resizeMode="contain"
          source={
            Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 100,
            }
          }
        />
        <YuText
          bold={true}
          style={
            Object {
              "color": "white",
              "fontSize": 30,
              "marginTop": 28,
            }
          }
        >
          locked
        </YuText>
      </Component>,
      "style": Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 0.92,
        "width": 750,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            resizeMethod="resize"
            resizeMode="contain"
            source={
              Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
              }
            }
            style={
              Object {
                "height": 30,
                "width": 100,
              }
            }
          />,
          <YuText
            bold={true}
            style={
              Object {
                "color": "white",
                "fontSize": 30,
                "marginTop": 28,
              }
            }
          >
            locked
          </YuText>,
        ],
        "style": Object {
          "backgroundColor": "#bebebe",
          "height": 300,
          "opacity": 0.92,
          "padding": 40,
          "width": 310,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "resize",
            "resizeMode": "contain",
            "source": Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
            },
            "style": Object {
              "height": 30,
              "width": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "locked",
            "style": Object {
              "color": "white",
              "fontSize": 30,
              "marginTop": 28,
            },
          },
          "ref": null,
          "rendered": "locked",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "backgroundColor": "#bebebe",
              "height": 300,
              "opacity": 0.92,
              "padding": 40,
              "width": 310,
            }
          }
        >
          <Image
            resizeMethod="resize"
            resizeMode="contain"
            source={
              Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
              }
            }
            style={
              Object {
                "height": 30,
                "width": 100,
              }
            }
          />
          <YuText
            bold={true}
            style={
              Object {
                "color": "white",
                "fontSize": 30,
                "marginTop": 28,
              }
            }
          >
            locked
          </YuText>
        </Component>,
        "style": Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 0.92,
          "width": 750,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Image
              resizeMethod="resize"
              resizeMode="contain"
              source={
                Object {
                  "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
                }
              }
              style={
                Object {
                  "height": 30,
                  "width": 100,
                }
              }
            />,
            <YuText
              bold={true}
              style={
                Object {
                  "color": "white",
                  "fontSize": 30,
                  "marginTop": 28,
                }
              }
            >
              locked
            </YuText>,
          ],
          "style": Object {
            "backgroundColor": "#bebebe",
            "height": 300,
            "opacity": 0.92,
            "padding": 40,
            "width": 310,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMethod": "resize",
              "resizeMode": "contain",
              "source": Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
              },
              "style": Object {
                "height": 30,
                "width": 100,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "locked",
              "style": Object {
                "color": "white",
                "fontSize": 30,
                "marginTop": 28,
              },
            },
            "ref": null,
            "rendered": "locked",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LockedOverlay should render with settings 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LockedOverlay
    code="abcdef"
    settings={
      Object {
        "__typename": "RewardUiSettings",
        "logoHeight": 1234,
        "logoWidth": 1234,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "backgroundColor": "#bebebe",
            "height": 300,
            "opacity": 0.92,
            "padding": 40,
            "width": 310,
          }
        }
      >
        <Image
          resizeMethod="resize"
          resizeMode="contain"
          source={
            Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
            }
          }
          style={
            Object {
              "height": 1234,
              "width": 1234,
            }
          }
        />
        <YuText
          bold={true}
          style={
            Object {
              "color": "white",
              "fontSize": 30,
              "marginTop": 28,
            }
          }
        >
          locked
        </YuText>
      </Component>,
      "style": Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 0.92,
        "width": 750,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            resizeMethod="resize"
            resizeMode="contain"
            source={
              Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
              }
            }
            style={
              Object {
                "height": 1234,
                "width": 1234,
              }
            }
          />,
          <YuText
            bold={true}
            style={
              Object {
                "color": "white",
                "fontSize": 30,
                "marginTop": 28,
              }
            }
          >
            locked
          </YuText>,
        ],
        "style": Object {
          "backgroundColor": "#bebebe",
          "height": 300,
          "opacity": 0.92,
          "padding": 40,
          "width": 310,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "resize",
            "resizeMode": "contain",
            "source": Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
            },
            "style": Object {
              "height": 1234,
              "width": 1234,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "locked",
            "style": Object {
              "color": "white",
              "fontSize": 30,
              "marginTop": 28,
            },
          },
          "ref": null,
          "rendered": "locked",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "backgroundColor": "#bebebe",
              "height": 300,
              "opacity": 0.92,
              "padding": 40,
              "width": 310,
            }
          }
        >
          <Image
            resizeMethod="resize"
            resizeMode="contain"
            source={
              Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
              }
            }
            style={
              Object {
                "height": 1234,
                "width": 1234,
              }
            }
          />
          <YuText
            bold={true}
            style={
              Object {
                "color": "white",
                "fontSize": 30,
                "marginTop": 28,
              }
            }
          >
            locked
          </YuText>
        </Component>,
        "style": Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 0.92,
          "width": 750,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Image
              resizeMethod="resize"
              resizeMode="contain"
              source={
                Object {
                  "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
                }
              }
              style={
                Object {
                  "height": 1234,
                  "width": 1234,
                }
              }
            />,
            <YuText
              bold={true}
              style={
                Object {
                  "color": "white",
                  "fontSize": 30,
                  "marginTop": 28,
                }
              }
            >
              locked
            </YuText>,
          ],
          "style": Object {
            "backgroundColor": "#bebebe",
            "height": 300,
            "opacity": 0.92,
            "padding": 40,
            "width": 310,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMethod": "resize",
              "resizeMode": "contain",
              "source": Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/e_grayscale/e_replace_color:white/c_fit,q_80/v1/reward/logo/abcdef_2x.png",
              },
              "style": Object {
                "height": 1234,
                "width": 1234,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "locked",
              "style": Object {
                "color": "white",
                "fontSize": 30,
                "marginTop": 28,
              },
            },
            "ref": null,
            "rendered": "locked",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
